# JR2003708

./:  Dragons and Princesses.py  .coveragerc  .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  SOLUTION.md  adventure.yml  docker-compose.yml  docs.md  dragons_and_princesses.py  example1.yaml  example2.yaml  example3.yaml  example4.yaml  example_data.yaml  factory.py  input.yaml  input_example.txt  main.py  pyproject.toml  reader.py  requirements.txt   simple_input.txt  solution.py  test.py  test_dragons_and_princesses.py  test_logic.py  test_main.py  test_solution.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docker/: README_DOCKER.md
src/: io_yaml.py  logic.py  main.py  models.py  planner.py  solver.py
src/knight_journey/: __init__.py  __main__.py  config.py  domain.py  journey.py  strategy.py
src/knight_journey/cli/: __init__.py  parser.py  runner.py  strategy_selector.py  validator.py
src/knight_journey/strategies/: __init__.py  buckets_strategy.py  heap_strategy.py
tests/: conftest.py  test_batch_cases.py  test_integration.py  test_planner.py
tests/data/: ex_all_dragons_ok.yaml  ex_early_strict.yaml  ex_impossible.yaml  ex_many_princesses.yaml
tests/integration/: test_cli_failure.py  test_cli_success.py
tests/unit/: test_preflight.py
tests/unit/test_journey/: test_journey_core.py
tests/unit/test_main/: test_main_missing_file.py  test_main_preflight_fail.py  test_main_success.py  test_main_zero_kills_output.py
tools/dragons_and_princesses/: core.py  requirements.txt
(+7 files in other folders)
