[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "knight_journey"
version = "0.1.0"
description = "Knight Journey CLI and core logic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["knight_journey*"]

[project.scripts]
knight-journey = "knight_journey.__main__:main"

[tool.pytest.ini_options]
addopts = "-q --cov=knight_journey --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
